--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+futures = "0.3"
+async-std = "1.12.0"
 
 [dependencies.sdl2]
 version = "0.32.1"
